# evochess

./: README.md  evochess.cabal  rules.txt  stack.yaml
app/: Main.hs
src/: Lib.hs
