name:                evochess
version:             0.1.0.0
synopsis:            A new chess flavored game
description:         Please see README.md
homepage:            http://github.com/masterdezign/evochess#readme
license:             GPL-3
license-file:        LICENSE
author:              Bogdan Penkovsky
maintainer:          dev () penkovsky dot com
copyright:           Bogdan Penkovsky
category:            Games
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                       , array
  default-language:    Haskell2010

executable evochess-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , evochess
  default-language:    Haskell2010

test-suite evochess-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , evochess
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/masterdezign/evochess
